# bept

./: .gitignore  Dockerfile  LICENSE  README.md  notes.md  pyproject.toml  requirements.txt
bept/: validator.py
bept/analysis/: pot_val.py
bept/auto/: history_pdb2pqr.txt
bio_docs/: NumPy.md  PBEQ-Tools.md  README.md  SASA Calculations.md  SASA_Calculations.md  electrostatic_gradient.md  filetype.md  forcefield.md  intro_to_compbio.md  proteins.md  resources.md
docs/: AMBER - Aditey Nandan.md  Notes by Aditya Thakkar.md  PDB vs PQR.md  auto.md  charmm - Shreyan.md  filetype.md  forcefield.md  gen.md  history.md  installation.md  intro.md  out.md  pdb and pqr (Kishan).md  proteins.md  pymol.md  requirements.txt
docs/source/: auto.rst  conf.py  gen.rst  history.rst  index.rst  installation.rst  out.rst  pymol.rst
resources/: README.md
resources/example_outputs/: 7y6i.bept  7y6i.in
src/: main.py
src/analysis/: coord_conv.py  elec_calc.py  pot_extract.py  pot_filemake.py  pot_main.py  pot_val.py  xyz.py
src/auto/: auto_execute.py  auto_file.py  file.txt  his_main.py  history_apbs.txt
src/bept/: __init__.py  main.py  validator.py
src/bept/analysis/: bept_csv_make.py  coord_conv.py  elec_calc.py  pot_extract.py  pot_main.py  pot_val.py  pqr_utils.py  surface_area.py  surface_pdb_sasa.py  utils.py  xyz.py
src/bept/analysis/opt_files/: cube.py  surface_pdb_sasa.py  xyz.py
src/bept/auto/: auto_execute.py  auto_file.py
src/bept/docs/: auto.md  docs_viewer.py  gen.md  intro.md  markdown1.py  out.md
src/bept/history/: cache_apbs.py  cache_vnr.py  his_main.py  his_utils.py  history_apbs.txt
src/bept/pymol/: mol_ext.py  radius_resi.py  show_bumps.py
src/bept/pymol/pymol_templates/: aligning_two_proteins.py  bulk_mutagenesis.py  bulk_mutation.py  calc_sasa.py  cartoon_representation.py  create_color_surface.py  dist_bw_atoms.py  point_mutagenesis.py  point_mutation.py  radius_resi.py  radius_selection.py  show_bumps.py  superimpose_two_proteins.py
test/data/: 1l2y.bept  1l2y.in  1l2y.pdb_surface_data.txt  1l2y.pqr  1l2y.xyz  1l2y_bept.csv  1l2y_surface_data.txt  7yg0.pqr  io.mc
test/data/.bept/: 1l2y_surface_data.csv
test/example_outputs/: 7y6i.csv  7y6i.pqr  7y6i.xyz
