[project]
name = "bept"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beaupy",
    "click>=8.1.7",
    "fzf-bin>=0.55.0",
    "loguru",
    "pandas>=2.2.2",
    "pdb2pqr>=3.6.2",
    "rich-click>=1.8.3",
    "rich>=13.8.0",
    "tabulate>=0.9.0",
]

[project.scripts]
bept = "bept.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
