[project]
name = "bept"
version = "0.1.0"
description = "BEPT is a Beginner friendly Electrostatics for Protein analysis Tool, a cross-platform interactive and user-friendly tool for protein electrostatics using APBS and PDB2PQR."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beaupy",
    "click>=8.1.7",
    "fzf-bin>=0.55.0",
    "pandas>=2.2.2",
    "pdb2pqr>=3.6.2",
    "rich-click>=1.8.3",
    "rich>=13.8.0",
    "tabulate>=0.9.0",
    "textual>=0.79.1",
    "toml>=0.10.2",
]
authors = [
    {name = "Anirudh Gupta"},
    {name = "Akshita Sunsugu Panliswami"},
    {name = "Aditya Thakkar"},
    {name = "Kishan Gowda"},
    {name = "G Hasini"},
    {name = "Soham Paul"},
    {name = "Aditey Nandan"},
    {name = "Ritobroto Saha"},
    {name = "Shreyan Priyadarshi"},
    {name = "Deeptam Bhar"},
]
maintainers = [
    {name = "Anirudh Gupta"},
]
license = {file = "LICENSE"}
keywords = ["apbs", "pdb2pqr", "protein", "electrostatics", "cli"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
homepage = "https://github.com/IISc-Software-iGEM/bept"
documentation = "https://github.com/IISc-Software-iGEM/bept/tree/main/docs"
repository = "https://github.com/IISc-Software-iGEM/bept.git"

[project.scripts]
bept = "bept.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
